--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -112,7 +112,7 @@ interval=1
 # #instance=1
 # interval=30
 [battery]
-command=~/.i3/i3-battery.py
+command=~/.config/i3/i3-battery.py
 markup=pango
 interval=5
 
