Arch install tested

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -84,7 +84,11 @@ interval=10
 label=
 interval=2
 min_width= 100.00%
-#separator=false
+separator=false
+
+[mem_usate]
+command=sh -c "awk '/MemAvailable/ {mem=\$2}; END { printf(\"%.1fG\", mem/1024/1024) }' /proc/meminfo"
+interval=3
 
 # Volume indicator
 #
@@ -92,7 +96,7 @@ min_width= 100.00%
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=/usr/share/i3blocks/volume 5 pulse
+command=/usr/lib/i3blocks/volume 5 pulse
 label=
 #label=♪
 # instance=Master
