--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -24,7 +24,7 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/lib/i3blocks/$BLOCK_NAME
+command=/usr/lib/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
@@ -96,7 +96,7 @@ interval=3
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=/usr/lib/i3blocks/volume 5 pulse
+command=/usr/lib/i3blocks/volume/volume 5 pulse
 label=
 #label=♪
 # instance=Master
