--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -36,10 +36,10 @@ markup=none
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-# [memory]
-# label=MEM
-# separator=false
-# interval=30
+[memory]
+#label=MEM
+#separator=false
+interval=3
 
 # [memory]
 # label=SWAP
@@ -84,11 +84,10 @@ interval=10
 label=
 interval=2
 min_width= 100.00%
-separator=false
 
-[mem_usate]
-command=sh -c "awk '/MemAvailable/ {mem=\$2}; END { printf(\"%.1fG\", mem/1024/1024) }' /proc/meminfo"
-interval=3
+# [mem_usate]
+# command=sh -c "awk '/MemAvailable/ {mem=\$2}; END { printf(\"%.1fG\", mem/1024/1024) }' /proc/meminfo"
+# interval=3
 
 # Volume indicator
 #
